--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,6 @@
     "angular-scenario": ">=1.2.*"
   },
   "resolutions": {
-    "angular": "1.4.3"
+    "angular": "^1.3.0 || >1.4.0-beta.0"
   }
 }
