--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^0.3.0",
     "lodash": "~2.4.1",
     "method-override": "~1.0.0",
+    "mongo-express":"~0.11.0",
     "mongoose": "~3.8.8",
     "mongoose-paginate": "^4.0.1",
     "morgan": "~1.0.0",
