--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "instieventsportal",
   "version": "0.0.0",
   "dependencies": {
-    "angular": ">=1.4.*",
+    "angular": "1.4.5",
     "json3": "~3.3.1",
     "es5-shim": "~3.0.1",
     "jquery": "~1.11.0",
@@ -15,7 +15,7 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
-    "angular-material": "~0.9.6",
+    "angular-material": "0.11.0",
     "angular-material-icons": "~0.4.0"
   },
   "devDependencies": {
@@ -23,6 +23,7 @@
     "angular-scenario": ">=1.2.*"
   },
   "resolutions": {
-    "angular": "^1.3.0 || >1.4.0-beta.0"
+    "angular": "1.4.5",
+    "angular-material": "0.11.0"
   }
 }
